font fixed to red hat and overflows now fixed

--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap");
+
 @import "tailwindcss";
+
+@theme {
+  --font-redHat: "Red Hat Text", sans-serif;
+}
